--- a/frontend/src/assets/styles/pages/index.css
+++ b/frontend/src/assets/styles/pages/index.css
@@ -13,5 +13,5 @@
   }
   
   .number_format {
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Roboto Condensed', sans-serif !important;
   }
