--- a/frontend/src/assets/styles/components/header.css
+++ b/frontend/src/assets/styles/components/header.css
@@ -7,11 +7,17 @@
 
 
 
-.landing{
+.header{
     position: fixed;
+    display: flex;                
+    justify-content: space-between; 
+    align-items: center;
     top: 0;
     left:0%;
     width: 100%;
+    height: 75px;
+    background-color: #052659  !important;
+    padding:10px;
 }
 
 .linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous) {
@@ -30,9 +36,6 @@
     opacity: 1;
     transition: all 0.5s;
     border-radius: inherit;
-    font-weight: 1000;
-    font-style: italic;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous):hover::before {
@@ -40,11 +43,33 @@
     
 }
 
+.black-linear-button{
+    color: #fff;
+    background-color: #000;
+    border-color: #052659;
+}
+
 .buttons-log {
-    justify-content: right;
+    justify-content: flex-end;
     position: static;
     align-self: flex-start;
-    margin-left: 89%;
     padding-bottom: 2px;
     margin-bottom: 2px;
+    padding-right: 10px;
+}
+
+.logo-JellyJobs{
+    width: 200px;
+    height: 100%;
+    background-image: url(../../../../public/logo.png);
+    background-size: contain;    
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.links{
+    display: block; 
+    width: 100%; 
+    height: 100%; 
+    text-indent: -9999px; 
 }
