--- a/frontend/src/assets/styles/components/footer.css
+++ b/frontend/src/assets/styles/components/footer.css
@@ -1,32 +1,42 @@
-@import url(../pages/index.css);
-.footer{
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 150px;
-    padding: 10px;
-    text-align: center;
-    left: 0;
-    background-color: #052659  !important;
-}
-.logo-insta, .logo-gmail, .logo-tw{
-    width: 30px;            
-    height: 30px; 
-    background-size: cover;  
-    border-radius: 50%;
-    margin: 10px;
-    position: relative;
-
-}
-.links{
-    display: block; 
-    width: 100%; 
-    height: 100%; 
-    text-indent: -9999px; 
-}
-
-.button-Abaut-ass-footer{
-    justify-content: flex-end;
-    position: static;
-    align-self: flex-start;
-}
+    padding: 20px;
+    text-align: left;
+    background-color: #052659;
+    color: white;
+  }
+  
+  .footer-nav {
+    display:flex;
+    justify-content: left;
+    gap: 50px;
+    align-items: left;
+  }
+  
+  .footer-item {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+  
+  .footer-item img {
+    width: 30px;
+    height: 30px;
+    margin-right: 80%;
+  }
+  
+  .footer-text {
+    color: white;
+    font-size: 16px;
+  }
+  
+  .about-ass-button-footer {
+    display: flex;
+    margin-left: 90%;
+    align-items:flex-start;
+    justify-content: right;
+    padding-right: 2.5%;
+  }
+  
