--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -1,39 +1,65 @@
-/* App.css */
-.login-page{
-  background-image: url('../../images/ej1.jpg'); /* Cambia esto a la ruta de tu imagen */
-  background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  height: 100vh; /* Ajusta la altura al 100% de la ventana del navegador */
-  width: 100vw; /* Asegura que el ancho sea el 100% de la ventana */
-  display: flex; /* Permite centrar el formulario */
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
-
+.contein-login-page {
+  display: flex; /* Usa flexbox para alinear los hijos en una fila */
+  justify-content: center; /* Centra los divs horizontalmente */
+  align-items: stretch; /* Hace que ambos divs tengan la misma altura */
+  width: 100%;
+  height: 100%;
 }
-.loginform {
-  position: relative; /* Necesario para que los elementos absolutos se posicionen en relación a este contenedor */
-  width: 400px;
-  height: 400px;
-  background-image: url('../../images/medu.jpg');
-  border: 1px solid var(--background-color);
-  border-radius: 5px;
-  margin: 0 auto;
-  margin-top: 100px;
+.full-screen-background {
+  position: fixed;/* Hace que la imagen esté en una posición fija */
+  top: 0;
+  left: 0;
+  width: 100vw; /* Ocupa todo el ancho de la pantalla */
+  height: 100vh; /* Ocupa todo el alto de la pantalla */
+  z-index: 1; /* Coloca la imagen debajo de otros elementos */
+  object-fit: cover; /* Asegura que la imagen mantenga su proporción mientras llena la pantalla */
+}
+.box {
+  width: 400px; /* Ancho del div */
+  height: 500px; /* Altura del div */
+  display: flex; /* Para centrar el contenido dentro del div */
+  justify-content: center; /* Centra el contenido horizontalmente */
+  align-items: center; /* Centra el contenido verticalmente */
+  margin: 0; /* Sin margen entre los divs */
+  padding: 0; /* Sin padding para evitar aumento de altura */
+  box-sizing: border-box; /* Incluye el padding y el borde en el tamaño total del div */
+}
+
+.gift-img-part {
+  background-color: var(--main-color); /* Color de fondo para el div del GIF */
+  display: flex; /* Para centrar la imagen dentro del div */
+  justify-content: center; /* Centra la imagen horizontalmente */
+  align-items: center; /* Centra la imagen verticalmente */
+  z-index: 2;
+}
+
+
+.form-part {
+  background-color: rgba(255, 255, 255,0); /* Color de fondo para el div del formulario */
+  box-shadow: -5px 0 15px var(--main-color); /* Sombra a la izquierda */
+  margin: 0; /* Sin márgenes adicionales */
+  position: relative;
   text-align: center;
-  box-shadow: 0 4px 8px var(--main-color);
-  padding: 20px; /* Mantén el padding */
-  box-sizing: border-box; /* Asegura que el padding esté incluido en el cálculo de altura */
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center;
-  color: var(--alternative-color);
+  flex-direction: column;
+  backdrop-filter: blur(10px);
+  z-index: 2;
+  
 }
 
+.gift-image {
+  width: 100%; /* Ocupa todo el ancho del contenedor */
+  height: 100%; /* Ocupa toda la altura del contenedor */
+  object-fit: cover; /* Mantiene la proporción del GIF y lo recorta si es necesario */
+}
+
+.form-button{
+  position:absolute;
+  bottom: 10px;
+  right: 100px;
+}
 :root {
   --main-color: #052659;
   --backround-color: #15263b;
   --secondary-color: #C1E8FF;
   --alternative-color: #BFDDFC;
 }
-
-  
