--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -59,7 +59,7 @@
 }
 :root {
   --main-color: #052659;
-  --backround-color: #15263b;
+  --backround-color: #7DA0CA;
   --secondary-color: #C1E8FF;
   --alternative-color: #BFDDFC;
 }
