--- a/frontend/src/assets/styles/pages/aboutUS.css
+++ b/frontend/src/assets/styles/pages/aboutUS.css
@@ -2,34 +2,28 @@
 @import url(../components/footer.css);
 #root{
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
-.information-section1{
-    display: flex;
-    padding: 50px;
-    margin-bottom:0;
-    text-align: center;
-    margin-top: 75px;
-    justify-content: space-between; /* Añadido para asegurar que el contenido se distribuya correctamente */
-    align-items: center; /* Asegura que el contenido esté centrado verticalmente */
+.contein-info-section1 , .contein-info-section2 , .contein-info-section3{
+    margin-top: 100px;
 }
-
-.information-section2{
+.information-section1 , .information-section2 , .information-section3{
     display: flex;
-    padding: 50px;
-    margin-bottom:0;
+    position: relative;
+    width: 100%;
+    height: 300px; /* Ajusta la altura según tu necesidad */
+    overflow: hidden; /* Esto oculta las imágenes fuera del contenedor visible */
+    margin-top: 125px;
+    margin-left: 0;
+    margin-right: 10px;
     text-align: center;
-    justify-content: space-between; /* Distribuye correctamente el espacio entre la imagen y el texto */
-    align-items: center; /* Asegura que el contenido esté centrado verticalmente */
 }
 .information-section3{
-    display: flex;
-    padding: 50px;
-    margin-bottom:0;
-    text-align: center;
-    justify-content: space-between; /* Distribuye correctamente el espacio entre la imagen y el texto */
-    align-items: center; /* Asegura que el contenido esté centrado verticalmente */
+    margin-bottom: 50px;
+}
+.information-section2{
+    margin-left: 10px;
 }
 
 :root {
