--- a/frontend/src/assets/styles/pages/joinUs.css
+++ b/frontend/src/assets/styles/pages/joinUs.css
@@ -5,28 +5,51 @@
     --secondary-color: #C1E8FF;
     --alternative-color: #BFDDFC;
 }
-.contain-form{
-        gap: 20px; /* Espacio entre los campos de formulario */
-        align-items: flex-start;
-        width: 50%;
-        position:fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: var(--main-color);
-        padding: 20px; /* Espaciado interno */
-        margin-top: 125px;
-        margin-bottom: 20px; /* Espacio fijo en la parte inferior */
-        max-height: calc(100% - 40px); /* Limita la altura máxima con margen de 20px arriba y abajo */
-        overflow-y: auto; /* Permite hacer scroll si el contenido es más alto que el contenedor */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; /* Centra el contenido dentro del div */
-        box-sizing: border-box; /* Incluye el padding en el cálculo del tamaño */
-        border-radius: 5px;
+
+/* Estilos generales para centrar el contenedor del formulario */
+.JoinUs-page-contein {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}   
+
+.full-screen-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    object-fit: cover;
+  }  
+
+.contain-form {
+    background-color: rgba(255, 255, 255,0);
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px var(--main-color); /* Sombra suave alrededor del formulario */
+    width: 100%;
+    max-width: 500px; /* Para que no sea demasiado ancho */
+    margin: 10% 30%; /* Márgenes superior e inferior */
+    flex-direction: column;
+}
+    
+.form-items {
+    margin-bottom: 20px; /* Espacio entre los elementos del formulario */
+    
 }
 
-.form-items{
-    flex: 1;
+button[type="submit"] {
+    width: 100%; /* Botón ocupa el ancho completo */
+    background-color: #1890ff; /* Color primario */
+    border: none;
+    color: white;
+    padding: 10px;
+    border-radius: 4px;
+}
+    
+button[type="submit"]:hover {
+     background-color: #40a9ff; /* Color al pasar el mouse */
 }
