--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -1,3 +1,10 @@
+@import url(../components/header.css);
+:root {
+  --main-color: #052659;
+  --backround-color: #7DA0CA;
+  --secondary-color: #C1E8FF;
+  --alternative-color: #BFDDFC;
+}
 .contein-login-page {
   display: flex; /* Usa flexbox para alinear los hijos en una fila */
   justify-content: center; /* Centra los divs horizontalmente */
@@ -5,39 +12,33 @@
   width: 100%;
   height: 100%;
 }
+
 .full-screen-background {
   position: fixed;/* Hace que la imagen esté en una posición fija */
   top: 0;
   left: 0;
   width: 100vw; /* Ocupa todo el ancho de la pantalla */
   height: 100vh; /* Ocupa todo el alto de la pantalla */
-  z-index: 1; /* Coloca la imagen debajo de otros elementos */
+  z-index: -1; /* Coloca la imagen debajo de otros elementos */
   object-fit: cover; /* Asegura que la imagen mantenga su proporción mientras llena la pantalla */
 }
 .box {
-  width: 400px; /* Ancho del div */
-  height: 500px; /* Altura del div */
-  display: flex; /* Para centrar el contenido dentro del div */
+  width: 500px; /* Ancho del div */
+  height: 600px; /* Altura del div */ /* Para centrar el contenido dentro del div */
   justify-content: center; /* Centra el contenido horizontalmente */
   align-items: center; /* Centra el contenido verticalmente */
   margin: 0; /* Sin margen entre los divs */
-  padding: 0; /* Sin padding para evitar aumento de altura */
+  padding: 20px; /* Sin padding para evitar aumento de altura */
   box-sizing: border-box; /* Incluye el padding y el borde en el tamaño total del div */
 }
-
-.gift-img-part {
-  background-color: var(--main-color); /* Color de fondo para el div del GIF */
-  display: flex; /* Para centrar la imagen dentro del div */
-  justify-content: center; /* Centra la imagen horizontalmente */
-  align-items: center; /* Centra la imagen verticalmente */
-  z-index: 2;
+input::placeholder{
+  color: #000 !important;
 }
-
-
 .form-part {
   background-color: rgba(255, 255, 255,0); /* Color de fondo para el div del formulario */
   box-shadow: -5px 0 15px var(--main-color); /* Sombra a la izquierda */
-  margin: 0; /* Sin márgenes adicionales */
+  margin-top: 6%; /* Sin márgenes adicionales */
+  margin-bottom: 6%;
   position: relative;
   text-align: center;
   flex-direction: column;
@@ -45,21 +46,15 @@
   z-index: 2;
   
 }
-
-.gift-image {
-  width: 100%; /* Ocupa todo el ancho del contenedor */
-  height: 100%; /* Ocupa toda la altura del contenedor */
-  object-fit: cover; /* Mantiene la proporción del GIF y lo recorta si es necesario */
+.form-items{
+  width: 100%;
+  margin: 20px;
+  flex-direction: column;
 }
+
 
 .form-button{
   position:absolute;
   bottom: 10px;
-  right: 100px;
-}
-:root {
-  --main-color: #052659;
-  --backround-color: #7DA0CA;
-  --secondary-color: #C1E8FF;
-  --alternative-color: #BFDDFC;
+  right: 10%;
 }
