--- a/frontend/src/assets/styles/components/header.css
+++ b/frontend/src/assets/styles/components/header.css
@@ -1,77 +1,51 @@
 :root {
-    --main-color: #052659;
-    --backround-color: #7DA0CA;
-    --secondary-color: #C1E8FF;
-    --alternative-color: #BFDDFC;
+    --background-color: #1A4E8D;
+    --hover-color: #00064a;
 }
 
-
-
-.header{
+.header {
     position: fixed;
     display: flex;                
     justify-content: space-between; 
     align-items: center;
     top: 0;
-    left:0%;
+    left: 0;
     width: 100%;
     height: 75px;
-    background-color: #052659  !important;
-    padding:10px;
-    background: linear-gradient(190deg, #C1E8FF,#052659);
+    padding: 10px;
     z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s ease;
+    background: linear-gradient(90deg, rgba(0, 6, 74, 1), rgba(26, 78, 141, 0.9)); /* Gradiente de izquierda a derecha */
 }
 
-.linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous) {
-    border-width: 0;
+.header:hover {
+    background: linear-gradient(90deg, var(--hover-color), var(--background-color)); /* Gradiente oscuro al hacer hover */
 }
 
-.linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous) > span {
-    position: relative;
+.header-button {
+    width: 100px;
+    height: 35px;
+    border: none;
+    border-radius: 50px;
+    background-color: white;
+    color: #00064a;
+    transition: background 0.3s ease, color 0.3s ease;
 }
 
-.linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous)::before {
-    content: '';
-    background: linear-gradient(180deg, #C1E8FF,#052659);
-    position: absolute;
-    inset: 0;
-    opacity: 0.5;
-    transition: all 0.5s;
-    border-radius: inherit;
+.header-button:hover {
+    background-color: #00064a !important;
+    color: white !important;
 }
 
-.linear-gradient-button.ant-btn-primary:not([disabled]):not(.ant-btn-dangerous):hover::before {
-    opacity: 70;
-    
-}
 
-.black-linear-button{
-    color: #fff;
-    background-color: #7DA0CA;
-    border-color: #052659;
-    background: linear-gradient(180deg, #C1E8FF,#052659)
+.logo-JellyJobs img {
+    width: 200px;
+    height: auto; /* Asegura que la imagen mantenga su proporción */
 }
 
 .buttons-log {
-    justify-content: flex-end;
-    position: static;
-    align-self: flex-start;
-    padding-bottom: 2px;
-    margin-bottom: 2px;
-    padding-right: 10px;
-}
-
-.logo-JellyJobs{
-    width: 200px;
-    height: 100%;
-    background-size: contain;    
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.links{
-    display: block; 
-    width: 100%; 
-    height: 100%; 
-    text-indent: -9999px; 
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espaciado entre botones */
 }
