--- a/frontend/src/assets/styles/components/slider.css
+++ b/frontend/src/assets/styles/components/slider.css
@@ -1,12 +1,17 @@
+:root {
+  --backround-color: #1A4E8D;
+  --hover-color: #00064a;
+}
+
 .carousel {
-    position: relative;
-    width: 100%;
-    height: 85.3vh; /* Ajusta la altura según tu necesidad */
-    overflow: hidden; /* Esto oculta las imágenes fuera del contenedor visible */
-    margin-top: 75px;
-    margin-left: 0;
-    margin-right: 0;
-  }
+  position: relative;
+  width: 100%;
+  height: 100vh; 
+  overflow: hidden;
+  margin-top: 75px;
+  margin-left: 0;
+  margin-right: 0;
+}
   
   .carousel__carouseles {
     display: flex; /* Esto coloca los elementos uno al lado del otro en fila */
@@ -33,19 +38,16 @@
     top: 50%;
     right: 10px;
     font-size: 1.5rem;
-    background-color: rgba(3, 24, 214, 0.45);
+    background-color: white;
     border-radius: 50%;
     padding: 10px;
     cursor: pointer;
-    color: #C1E8FF;
     transform: translateY(-50%);
     z-index: 3;
-    transition: background-color 0.3s ease, color 0.3s ease;
   }
   
   .carousel__rightBtn:hover {
-    background-color: rgb(255, 255, 255);
-    color: #C1E8FF;
+    background-color: var(--backround-color);
   }
   
   /* Capa oscura sobre las imágenes */
@@ -55,7 +57,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 6, 74, 0.3);
     z-index: 1;
   }
   
@@ -77,6 +79,25 @@
     font-size: 1.2rem;
     color: white;
     margin-top: 10px;
+  }
+
+  .slider-button {
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    border: 2px solid transparent;
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    background-color: rgba(26, 78, 141, 0.5);
+    border-radius: 5px;
+  }
+  
+  .slider-button:hover {
+    border-color: white;
+    background-color: rgba(255, 255, 255, 0.3);
+    cursor: pointer;
   }
   
 
