--- a/frontend/src/assets/styles/pages/joinUs.css
+++ b/frontend/src/assets/styles/pages/joinUs.css
@@ -1,10 +1,8 @@
 @import url(../components/header.css);
 :root {
-    --main-color: #052659;
-    --backround-color: #7DA0CA;
-    --secondary-color: #C1E8FF;
-    --alternative-color: #BFDDFC;
-}
+    --backround-color: #1A4E8D;
+    --main-color: #00064a;
+  }
 
 /* Estilos generales para centrar el contenedor del formulario */
 .JoinUs-page-contein {
@@ -31,7 +29,7 @@
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0px 4px 12px var(--main-color); 
-    width: 80%;
+    width: 100%;
     max-width: 600px; 
     margin: 10% 30%; 
     display: flex;
@@ -177,7 +175,7 @@
     font-size: 16px; /* Tamaño de fuente */
     cursor: pointer; /* Cambiar el cursor al pasar el ratón */
     transition: background-color 0.3s, color 0.3s; /* Transición suave */
-    margin: 10px auto; /* Centrar el botón y agregar un margen superior */
+    margin: 10px; /* Centrar el botón y agregar un margen superior */
 }
 
 #joinUsButton:hover {
