--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -1,10 +1,8 @@
 @import url(../components/header.css);
 
 :root {
-  --main-color: #052659;
-  --backround-color: #7DA0CA;
-  --secondary-color: #C1E8FF;
-  --alternative-color: #BFDDFC;
+  --backround-color: #1A4E8D;
+  --main-color: #00064a;
 }
 
 /*Posición del recuadro*/
@@ -12,8 +10,8 @@
   display: flex;
   justify-content: center; /* Centra los divs horizontalmente */
   align-items: center; /* Alinea verticalmente */
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 /*Posición del fondo de medusas*/
@@ -27,38 +25,29 @@
   object-fit: cover; /* Mantiene proporción de la imagen */
 }
 
-/*Tamaño de la caja*/
+/*Tamaño y estilo de la caja*/
 .box {
-  width: 350px;
-  height: 400px;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+  width: 100%;
+  max-width: 350px;
+  height: 100%;
+  max-height: 400px;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   border-radius: 15px; 
-}
-
-/*Propiedades de la caja*/
-.form-part {
   background-color: transparent;
-  box-shadow: -5px 0 15px var(--main-color); /* Sombra en el contenedor */
+  box-shadow: -5px 0 15px var(--main-color);
   margin-top: 8%;
-  margin-bottom: 6%;
-  position: relative;
-  text-align: center;
-  flex-direction: column;
-  backdrop-filter: blur(10px); /* Efecto de desenfoque */
-  z-index: 2;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
+  margin-bottom: 8%;
+  padding: 20px;
+  backdrop-filter: blur(10px);
 }
 
 /*Título de la caja*/
 .title-form {
   color: white;
   font-weight: bold; /* Texto en negrita */
-  font-size: 35px;
+  font-size: 40px;
   text-align: center;
   margin: 20px;
   padding-top: 20px;
@@ -77,14 +66,13 @@
   background-color: transparent;
   color: white;
   border: none;
+  border-radius: 15px;
   border-bottom: 1px solid white; /* Borde inferior */
   padding: 10px;
 }
 
 /*Mantener transparente el fondo de los campos*/
-.form-items .ant-input:empty {
-  background-color: transparent !important;
-}
+.form-items .ant-input:empty,
 .form-items .ant-input-password {
   background-color: transparent !important;
 }
@@ -100,6 +88,7 @@
 .form-items .ant-input::placeholder,
 .form-items .ant-input-password::placeholder {
   color: white; /* Color del placeholder */
+  font-size: 14px;
 }
 /*Color del ojito de password*/
 .ant-input-password .ant-input-suffix svg {
@@ -107,24 +96,24 @@
 }
 
 /*Botón Acceder*/
-.form-button {
-  width: 25%;
-  margin-top: 40px;
-}
-
-.form-button button {
-  width: 260px !important; /* Ancho del botón */
+/* Posición y estilo del botón */
+.login-button {
+  width: 100%; 
+  display: flex;
+  justify-content: center; 
+  margin-top: 30px !important;
+  margin: 20px;
   font-size: 16px;
-  padding: 5px 20px;
   border: none;
-  border-radius: 15px !important;
-  background-color: white !important;
-  color: black !important;
+  border-radius: 15px;
+  background-color: white;
+  color: black;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s; /* Transición en hover */
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.form-button button:hover {
+/* Hover del botón */
+.login-button:hover {
   background-color: var(--main-color) !important;
-  color: white !important; /* Cambia a blanco al hacer hover */
+  color: white;
 }
