--- a/frontend/src/assets/styles/pages/notFound.css
+++ b/frontend/src/assets/styles/pages/notFound.css
@@ -1,6 +1,6 @@
 :root {
-    --main-color: #052659;
-    --background-color: #7DA0CA;
+    --main-color:#00064a;
+    --background-color: #1A4E8D;
     --secondary-color: #C1E8FF;
     --alternative-color: #BFDDFC;
   }
@@ -12,7 +12,7 @@
   }
   
   body {
-    background-color: var(--background-color);
+    background-color: var(--alternative-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +21,7 @@
   .not-found-container {
     text-align: center;
     padding: 50px;
-    background-color: var(--background-color);
+    background-color: var(--alternative-color);
     color: var(--main-color);
     align-self: center;
     justify-content: center;
@@ -54,11 +54,11 @@
   }
   
   .not-found-container a {
-    color: var(--secondary-color);
+    color: var(--background-color);
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px;
-    border: 2px solid var(--alternative-color);
+    border: 2px solid var(--background-color);
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
     margin-top: 10%;
@@ -66,6 +66,7 @@
 
   
   .not-found-container a:hover {
-    background-color: var(--alternative-color);
-    color: var(--main-color);
+    background-color: var(--main-color);
+    color: var(--secondary-color);
+    border: 2px solid var(--main-color);
   }
