Home a medio hacer Garza y Belu

--- a/frontend/src/assets/styles/pages/home.css
+++ b/frontend/src/assets/styles/pages/home.css
@@ -1,9 +1,9 @@
 :root {
-    --main-color: #052659;
-    --backround-color: #7DA0CA;
-    --secondary-color: #C1E8FF;
-    --alternative-color: #BFDDFC;
+    --backround-color: #1A4E8D;
+    --main-color: #00064a;
 }
+
+
 #root{
     width: 100%;
     height: 100vh;
@@ -12,39 +12,7 @@
     width: 100%;
     height: 100vh;
 }
-.menu-icon{
-    background-color: transparent;
-    border-color: var(--backround-color);
-    margin-right: 10px;
-    box-shadow: -1px -1px 5px var(--backround-color);
-    
-}
-.links-functions{
-    background-color: var(--main-color);
-    width: 100%;
-    height: 100px;
-    padding: 10px;
-}
-.menu-functions .ant-menu-item{
-    background-color: transparent !important;
-}
-.trabajadores-tabla-scroll{
-    width: 100%;
-    height: 300px;
-    background-color: var(--main-color);
-    overflow-x: auto; /* Permitir desplazamiento horizontal */
-    overflow-y: hidden;
-    white-space: nowrap; /* Evitar que los elementos se envuelvan */
-    align-items: center;
-    padding: 15px;
-    display: flex;
-}
-.element-trabajador{
-    width: 200px;
-    height: 200px;background-color: var(--secondary-color);
-    margin: 30px;
-    padding: 30px;
-    align-items: center;
-    text-align: center;
-    display: table-column;
+.menu-functions{
+    background-color: var(--backround-color) !important;
+    height: 100vh;
 }
