--- a/frontend/src/assets/styles/pages/joinUs.css
+++ b/frontend/src/assets/styles/pages/joinUs.css
@@ -202,3 +202,20 @@
     height: 100px;
     object-fit: cover; /* Mantener el aspecto de la imagen */
 }
+
+.back-arrow {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: white;
+    font-size: 36px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    z-index: 1 !important;
+  }
+  
+  /* Animación al pasar el cursor por la flecha */
+  .back-arrow:hover {
+    transform: scale(1.2); /* Aumenta el tamaño un poco */
+    color: var(--main-color);
+}
