--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -117,3 +117,21 @@
   background-color: var(--main-color) !important;
   color: white;
 }
+
+/* Posición y estilo de la flecha de regreso */
+.back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: white;
+  font-size: 36px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  z-index: 1 !important;
+}
+
+/* Animación al pasar el cursor por la flecha */
+.back-arrow:hover {
+  transform: scale(1.2); /* Aumenta el tamaño un poco */
+  color: var(--main-color);
+}
