--- a/frontend/src/assets/styles/pages/login.css
+++ b/frontend/src/assets/styles/pages/login.css
@@ -12,6 +12,7 @@
   align-items: center; /* Alinea verticalmente */
   width: 100vw;
   height: 100vh;
+  margin-top: 75px;
 }
 
 /*Posición del fondo de medusas*/
