--- a/frontend/src/assets/styles/pages/joinUs.css
+++ b/frontend/src/assets/styles/pages/joinUs.css
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    margin-top: 75px;
 }   
 
 .full-screen-background {
